added guess history to DOM

--- a/server/public/styles/styles.css
+++ b/server/public/styles/styles.css
@@ -1,5 +1,5 @@
 button {
-    background-color: A0B8AA;
+    background-color: #FFC876;
     border: none;
     color: white;
     text-align: center;
