--- a/server/public/styles/styles.css
+++ b/server/public/styles/styles.css
@@ -1,8 +1,9 @@
 button {
-    background-color: #FFC876;
+    background-color: #Be3d3d;
     border: none;
     color: white;
     text-align: center;
     font-size: 16px;
     border-radius: 15px;
+    padding: 15px 32px;
 }
